<resources>
    /*russian*/
    <string name="app_name">Max Alert</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings_default_username">Какой-то Юзер</string>
    <string name="settings_default_login">Какой-то Юзер</string>
    <string name="settings_default_bio">О себе</string>
    <string name="settings_default_status">в сети</string>
    <string name="settings_text_account">аккаунт</string>
    <string name="settings_default_number">+7-999-999-99-99</string>
    <string name="settings_label_phone_number">Нажмите, чтобы изменить номер телефона</string>
    <string name="settings_label_login">Имя пользователя</string>
    <string name="settings_label_bio">Напишите немного о себе</string>
    <string name="settings_menu_change_name">Изменить имя</string>
    <string name="settings_menu_exit">Выход</string>

    <string name="cd_register_image">register_image</string>

    <string name="register_text_enter_code">введите код</string>
    <string name="register_text_we_sent">Мы отправили SMS с кодом проверки на Ваш телефон</string>
    <string name="register_hint_default_code">- - - - - -</string>
    <string name="register_title_your_phone">Ваш телефон</string>
    <string name="register_toast_enter_phone">Веедите номер телефона</string>
    <string name="register_phone_hint">+- --- -- -- ---</string>
    <string name="settings_hint_input_name">Имя</string>
    <string name="settings_hint_input_surname">Фамилия</string>
    <string name="settings_toast_name_is_empty">Имя не может быть пустым</string>
    <string name="toast_data_update">Данные обновлены</string>
    <string name="setting_hint_input_username">username</string>
    <string name="settings_input_bio">bio</string>
</resources>
